--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -13,7 +13,14 @@
 </head>
 <body>
 <div class="container">
-    <div class="row pt-3">
+    <div class="row">
+        <ul class="nav">
+            <li class="nav-item">
+                <a class="nav-link" href="#" onclick="logout()">Выйти</a>
+            </li>
+        </ul>
+    </div>
+    <div class="row">
         <div class="col-md-12">
             <div class="card card-white">
                 <div class="card-body">
