--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -7,6 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <!-- Latest compiled and minified CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-select@1.13.14/dist/css/bootstrap-select.min.css">
     <!-- Custom styles -->
     <link rel="stylesheet" href="style.css">
     <title>Todo</title>
@@ -24,13 +25,36 @@
         <div class="col-md-12">
             <div class="card card-white">
                 <div class="card-body">
-                    <form action="javascript:void(0);">
-                        <input type="text" class="form-control add-task" placeholder="Добавить новое задание...">
+                    <form id="form" action="javascript:void(0);">
+                        <div class="form-group">
+                            <input
+                                    type="text"
+                                    id="description"
+                                    class="form-control add-task"
+                                    placeholder="Введите описание задания"
+                                    required
+                            >
+                        </div>
+                        <div class="form-group">
+                            <select
+                                    id="categories"
+                                    class="selectpicker"
+                                    multiple data-live-search="true"
+                                    required
+                            >
+                            </select>
+                        </div>
+                        <button type="submit" class="btn btn-success btn-block">Добавить</button>
                     </form>
                     <ul class="nav nav-pills todo-nav">
-                        <li role="presentation" class="nav-item all-task active"><a href="#" class="nav-link">Все</a></li>
-                        <li role="presentation" class="nav-item active-task"><a href="#" class="nav-link">Активные</a></li>
-                        <li role="presentation" class="nav-item completed-task"><a href="#" class="nav-link">Выполненные</a></li>
+                        <li role="presentation" class="nav-item all-task active">
+                            <a href="#" class="nav-link">Все</a>
+                        </li>
+                        <li role="presentation" class="nav-item active-task">
+                            <a href="#" class="nav-link">Активные</a>
+                        </li>
+                        <li role="presentation" class="nav-item completed-task">
+                            <a href="#" class="nav-link">Выполненные</a></li>
                     </ul>
                     <div class="todo-list">
                     </div>
@@ -45,6 +69,7 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
 <!-- Latest compiled JavaScript -->
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap-select@1.13.14/dist/js/bootstrap-select.min.js"></script>
 <!-- Custom script -->
 <script src="script.js"></script>
 </body>
